Fix minor mobile cropping issues

--- a/wandersync-showcase/src/components/Destinations.css
+++ b/wandersync-showcase/src/components/Destinations.css
@@ -64,7 +64,7 @@
     }
 
     .destinations .title-box h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
 
     .destinations .content-box p {
