--- a/wandersync-showcase/src/components/Dining.css
+++ b/wandersync-showcase/src/components/Dining.css
@@ -64,7 +64,7 @@
     }
 
     .dining .title-box h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
 
     .dining .content-box p {
