--- a/wandersync-showcase/src/components/Transportation.css
+++ b/wandersync-showcase/src/components/Transportation.css
@@ -63,7 +63,7 @@
     }
 
     .transportation .title-box h1 {
-        font-size: 50px;
+        font-size: 35px;
     }
 
     .transportation .content-box p {
