--- a/wandersync-showcase/src/components/Travel.css
+++ b/wandersync-showcase/src/components/Travel.css
@@ -64,7 +64,7 @@
     }
 
     .travel .title-box h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
 
     .travel .content-box p {
